# rustfatigue

./: .gitignore  Cargo.toml  README.md  license.md  pyproject.toml
.github/workflows/: main.yml
ci/: build_linux.sh  build_windows.bat
examples/: 1_basic.py  2_halfcycles.py
rustfatigue/: __init__.py  rustfatigue.pyi  rustinterface.py
rustfatigue/tests/: rustfatigue_test.py
src/: lib.rs  main.rs  python_module.rs  tests.rs
tests/: tests.rs
