[package]
name = "rustfatigue"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A fatigue calculation library for Python written in Rust."
repository = "https://github.com/jaimeliew1/rustfatigue"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"rand" = "0.8.4"
num = "0.4.0"