[package]
name = "rustfatigue"
version = "0.1.4"
edition = "2021"
license = "MIT"
description = "A fatigue calculation library for Python written in Rust."
repository = "https://github.com/jaimeliew1/rustfatigue"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rustfatigue"
crate-type = ["cdylib"]


[dependencies]
itertools = "0.14.0"
num = "0.4.0"
numpy = "0.21.0"
pyo3 = { version = "0.21.1", features = ["extension-module"] }
