[project]
name = "rust-fatigue"
description = "A fatigue calculation library for Python written in Rust."
readme = "README.md"
python = "^3.6"
repository = "https://github.com/jaimeliew1/rustfatigue"
keywords = ["fatigue", "windenergy"]
dependencies = ["numpy>=1.19.2", "pytest>=5.1.2"]

[build-system]
requires = ["maturin>=0.12,<0.13"]
build-backend = "maturin"
