[project]
name = "rustfatigue"
version = "0.1.5"
description = "A damage equivalent load calculator for Python written in Rust."
readme = "README.md"
authors = [{ name = "Jaime Liew", email = "jaimeliew1@gmail.com" }]
requires-python = ">=3.7"
dependencies = ["numpy>=1.19.2"]

[dependency-groups]
dev = ["pytest>=7.4.4"]


[build-system]
requires = ["maturin>=0.12,<0.13"]
build-backend = "maturin"
